// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> rendered correctly with Autocomplete off fixture 1`] = `
<TextField
  autoComplete="off"
  disabled={false}
  id="firstname"
  inline={false}
  isValid={true}
  isVerified={false}
  label="First Name"
  marker="none"
  markerTooltip={null}
  name="firstname"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onMarkerClick={[Function]}
  value=""
>
  <div
    className="outer"
  >
    <div
      className="block"
    >
      <input
        autoComplete="off"
        className="input"
        disabled={false}
        id="firstname"
        name="firstname"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
      <div
        className="helper"
      />
      <label
        className="label"
        htmlFor="firstname"
      >
        First Name
      </label>
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> rendered correctly with Default fixture 1`] = `
<TextField
  disabled={false}
  id="demo"
  inline={false}
  isValid={true}
  isVerified={false}
  label="First Name"
  marker="none"
  markerTooltip={null}
  name="demo"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onMarkerClick={[Function]}
  value=""
>
  <div
    className="outer"
  >
    <div
      className="block"
    >
      <input
        className="input"
        disabled={false}
        id="demo"
        name="demo"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
      <div
        className="helper"
      />
      <label
        className="label"
        htmlFor="demo"
      >
        First Name
      </label>
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> rendered correctly with Disabled fixture 1`] = `
<TextField
  disabled={true}
  id="demo"
  inline={false}
  isValid={true}
  isVerified={false}
  label="First Name"
  marker="none"
  markerTooltip={null}
  name="demo"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onMarkerClick={[Function]}
  value=""
>
  <div
    className="outer disabled"
  >
    <div
      className="block"
    >
      <input
        className="input"
        disabled={true}
        id="demo"
        name="demo"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
      <div
        className="helper"
      />
      <label
        className="label"
        htmlFor="demo"
      >
        First Name
      </label>
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> rendered correctly with Error fixture 1`] = `
<TextField
  disabled={false}
  error="Something isn't right"
  id="demo"
  inline={false}
  isValid={false}
  isVerified={false}
  label="First Name"
  marker="none"
  markerTooltip={null}
  name="demo"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onMarkerClick={[Function]}
  value=""
>
  <div
    className="outer invalid"
  >
    <div
      className="block"
    >
      <input
        className="input"
        disabled={false}
        id="demo"
        name="demo"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
      <div
        className="helper"
      />
      <label
        className="label"
        htmlFor="demo"
      >
        First Name
      </label>
    </div>
    <label
      className="description"
      htmlFor="demo"
    >
      Something isn't right
    </label>
  </div>
</TextField>
`;

exports[`<TextField /> rendered correctly with Info tooltip fixture 1`] = `
<TextField
  disabled={false}
  id="demo"
  inline={false}
  isValid={true}
  isVerified={false}
  label="First Name"
  marker="info"
  markerTooltip={
    <div>
      Test HTML
    </div>
  }
  name="demo"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onMarkerClick={[Function]}
  value=""
>
  <div
    className="outer hasMarker"
  >
    <div
      className="block"
    >
      <input
        className="input"
        disabled={false}
        id="demo"
        name="demo"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
      <div
        className="helper"
      >
        <Popover
          content={
            <div>
              Test HTML
            </div>
          }
          light={true}
          preferRight={true}
        >
          <Tooltip
            animateFill={true}
            animation="shift"
            arrow={false}
            arrowSize="regular"
            className=""
            delay={100}
            disabled={false}
            distance={10}
            duration={375}
            followCursor={false}
            hideDelay={300}
            hideDuration={375}
            hideOnClick={true}
            html={
              <PopoverDisplay
                className={undefined}
                light={true}
                tooltip={undefined}
              >
                <div>
                  Test HTML
                </div>
              </PopoverDisplay>
            }
            inertia={false}
            interactive={true}
            interactiveBorder={16}
            multiple={false}
            offset={0}
            onHidden={[Function]}
            onHide={[Function]}
            onRequestClose={[Function]}
            onShow={[Function]}
            onShown={[Function]}
            popperOptions={Object {}}
            position="bottom-end"
            size="regular"
            sticky={false}
            stickyDuration={200}
            style={Object {}}
            theme="dark"
            touchHold={false}
            trigger="mouseenter"
            unmountHTMLWhenHide={false}
          >
            <div
              className=""
              style={
                Object {
                  "display": "inline",
                }
              }
            >
              <Help
                className="helperIcon"
                fill="currentColor"
                height={32}
                width={32}
              />
            </div>
          </Tooltip>
        </Popover>
      </div>
      <label
        className="label"
        htmlFor="demo"
      >
        First Name
      </label>
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> rendered correctly with InvalidMarker fixture 1`] = `
<TextField
  disabled={false}
  error="Something isn't right"
  id="demo"
  inline={false}
  isValid={false}
  isVerified={false}
  label="First Name"
  marker="tick-cross"
  markerTooltip={null}
  name="demo"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onMarkerClick={[Function]}
  value="Bruce"
>
  <div
    className="outer invalid hasMarker"
  >
    <div
      className="block"
    >
      <input
        className="input"
        disabled={false}
        id="demo"
        name="demo"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value="Bruce"
      />
      <div
        className="helper"
      >
        <Cross
          className="marker"
          fill="currentColor"
          height={32}
          onClick={[Function]}
          width={32}
        />
      </div>
      <label
        className="label floating"
        htmlFor="demo"
      >
        First Name
      </label>
    </div>
    <label
      className="description"
      htmlFor="demo"
    >
      Something isn't right
    </label>
  </div>
</TextField>
`;

exports[`<TextField /> rendered correctly with UnVerified status fixture 1`] = `
<TextField
  disabled={false}
  id="demo"
  inline={false}
  isValid={true}
  isVerified={false}
  label="Mobile"
  marker="verify"
  markerTooltip={
    <UNDEFINED>
      <mockConstructor
        className="editIcon"
        name="Edit"
        shadow={false}
      />
      <mockConstructor
        h1={false}
        h2={false}
        h3={true}
        h4={false}
        nav={false}
      >
        Sample Popup
      </mockConstructor>
      <Paragraph
        className="paragraph"
      >
        Sample content
      </Paragraph>
    </UNDEFINED>
  }
  name="demo"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onMarkerClick={[Function]}
  value=""
>
  <div
    className="outer hasMarker"
  >
    <div
      className="block"
    >
      <input
        className="input"
        disabled={false}
        id="demo"
        name="demo"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
      <div
        className="helper"
      >
        <Popover
          content={
            <UNDEFINED>
              <mockConstructor
                className="editIcon"
                name="Edit"
                shadow={false}
              />
              <mockConstructor
                h1={false}
                h2={false}
                h3={true}
                h4={false}
                nav={false}
              >
                Sample Popup
              </mockConstructor>
              <Paragraph
                className="paragraph"
              >
                Sample content
              </Paragraph>
            </UNDEFINED>
          }
          light={true}
          preferRight={true}
        >
          <Tooltip
            animateFill={true}
            animation="shift"
            arrow={false}
            arrowSize="regular"
            className=""
            delay={100}
            disabled={false}
            distance={10}
            duration={375}
            followCursor={false}
            hideDelay={300}
            hideDuration={375}
            hideOnClick={true}
            html={
              <PopoverDisplay
                className={undefined}
                light={true}
                tooltip={undefined}
              >
                <UNDEFINED>
                  <mockConstructor
                    className="editIcon"
                    name="Edit"
                    shadow={false}
                  />
                  <mockConstructor
                    h1={false}
                    h2={false}
                    h3={true}
                    h4={false}
                    nav={false}
                  >
                    Sample Popup
                  </mockConstructor>
                  <Paragraph
                    className="paragraph"
                  >
                    Sample content
                  </Paragraph>
                </UNDEFINED>
              </PopoverDisplay>
            }
            inertia={false}
            interactive={true}
            interactiveBorder={16}
            multiple={false}
            offset={0}
            onHidden={[Function]}
            onHide={[Function]}
            onRequestClose={[Function]}
            onShow={[Function]}
            onShown={[Function]}
            popperOptions={Object {}}
            position="bottom-end"
            size="regular"
            sticky={false}
            stickyDuration={200}
            style={Object {}}
            theme="dark"
            touchHold={false}
            trigger="mouseenter"
            unmountHTMLWhenHide={false}
          >
            <div
              className=""
              style={
                Object {
                  "display": "inline",
                }
              }
            >
              <div
                className="verifiedTag unVerified"
                onClick={[Function]}
              >
                Verify
              </div>
            </div>
          </Tooltip>
        </Popover>
      </div>
      <label
        className="label"
        htmlFor="demo"
      >
        Mobile
      </label>
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> rendered correctly with ValidMarker fixture 1`] = `
<TextField
  disabled={false}
  id="demo"
  inline={false}
  isValid={true}
  isVerified={false}
  label="First Name"
  marker="tick-cross"
  markerTooltip={null}
  name="demo"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onMarkerClick={[Function]}
  value="Bruce"
>
  <div
    className="outer hasMarker"
  >
    <div
      className="block"
    >
      <input
        className="input"
        disabled={false}
        id="demo"
        name="demo"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value="Bruce"
      />
      <div
        className="helper"
      >
        <Tick
          className="marker"
          fill="currentColor"
          height={32}
          onClick={[Function]}
          width={32}
        />
      </div>
      <label
        className="label floating"
        htmlFor="demo"
      >
        First Name
      </label>
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> rendered correctly with Value fixture 1`] = `
<TextField
  disabled={false}
  id="demo"
  inline={false}
  isValid={true}
  isVerified={false}
  label="First Name"
  marker="none"
  markerTooltip={null}
  name="demo"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onMarkerClick={[Function]}
  value="Oscar"
>
  <div
    className="outer"
  >
    <div
      className="block"
    >
      <input
        className="input"
        disabled={false}
        id="demo"
        name="demo"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value="Oscar"
      />
      <div
        className="helper"
      />
      <label
        className="label floating"
        htmlFor="demo"
      >
        First Name
      </label>
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> rendered correctly with Verified status fixture 1`] = `
<TextField
  disabled={false}
  id="demo"
  inline={false}
  isValid={true}
  isVerified={false}
  label="Mobile"
  marker="verify"
  markerTooltip={null}
  name="demo"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onMarkerClick={[Function]}
  value=""
>
  <div
    className="outer hasMarker"
  >
    <div
      className="block"
    >
      <input
        className="input"
        disabled={false}
        id="demo"
        name="demo"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
      <div
        className="helper"
      >
        <div
          className="verifiedTag unVerified"
          onClick={[Function]}
        >
          Verify
        </div>
      </div>
      <label
        className="label"
        htmlFor="demo"
      >
        Mobile
      </label>
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> rendered correctly with noLabel fixture 1`] = `
<TextField
  disabled={false}
  id="demo"
  inline={false}
  isValid={true}
  isVerified={false}
  marker="none"
  markerTooltip={null}
  name="demo"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onMarkerClick={[Function]}
  value=""
>
  <div
    className="outer"
  >
    <div
      className="block"
    >
      <input
        className="input noLabel"
        disabled={false}
        id="demo"
        name="demo"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
      <div
        className="helper"
      />
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> rendered correctly with password fixture 1`] = `
<TextField
  disabled={false}
  id="demo"
  inline={false}
  isValid={true}
  isVerified={false}
  label="Password"
  marker="none"
  markerTooltip={null}
  name="demo"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onMarkerClick={[Function]}
  password={true}
  value=""
>
  <div
    className="outer"
  >
    <div
      className="block"
    >
      <input
        className="input"
        disabled={false}
        id="demo"
        name="demo"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="password"
        value=""
      />
      <div
        className="helper"
      />
      <label
        className="label"
        htmlFor="demo"
      >
        Password
      </label>
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> rendered correctly with small fixture 1`] = `
<TextField
  disabled={false}
  id="demo"
  inline={false}
  isValid={true}
  isVerified={false}
  label="First Name"
  marker="none"
  markerTooltip={null}
  name="demo"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onMarkerClick={[Function]}
  small={true}
  value=""
>
  <div
    className="outer small"
  >
    <div
      className="block"
    >
      <input
        className="input small"
        disabled={false}
        id="demo"
        name="demo"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
      <div
        className="helper"
      />
      <label
        className="label small"
        htmlFor="demo"
      >
        First Name
      </label>
    </div>
  </div>
</TextField>
`;

exports[`<TextField /> rendered correctly with smallNoLabel fixture 1`] = `
<TextField
  disabled={false}
  id="demo"
  inline={false}
  isValid={true}
  isVerified={false}
  marker="none"
  markerTooltip={null}
  name="demo"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onMarkerClick={[Function]}
  small={true}
  value=""
>
  <div
    className="outer small"
  >
    <div
      className="block"
    >
      <input
        className="input small noLabel"
        disabled={false}
        id="demo"
        name="demo"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
      <div
        className="helper"
      />
    </div>
  </div>
</TextField>
`;

exports[`TextField test interaction 1`] = `
<TextField
  disabled={false}
  id="demo"
  inline={false}
  isValid={true}
  isVerified={false}
  label="Label"
  marker="none"
  markerTooltip={null}
  name="demo"
  onBlur={[Function]}
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "props": Object {
              "disabled": false,
              "id": "demo",
              "inline": false,
              "isValid": true,
              "isVerified": false,
              "label": "Label",
              "marker": "none",
              "markerTooltip": null,
              "name": "demo",
              "onBlur": [Function],
              "onChange": [MockFunction] {
                "calls": [Circular],
              },
              "onFocus": [Function],
              "onMarkerClick": [Function],
              "value": "",
            },
            "value": "",
          },
        ],
      ],
    }
  }
  onFocus={[Function]}
  onMarkerClick={[Function]}
  value=""
>
  <div
    className="outer"
  >
    <div
      className="block"
    >
      <input
        className="input"
        disabled={false}
        id="demo"
        name="demo"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
      <div
        className="helper"
      />
      <label
        className="label"
        htmlFor="demo"
      >
        Label
      </label>
    </div>
  </div>
</TextField>
`;
